create table if not exists book
(
    isbn         varchar(255) not null,
    author       varchar(255),
    title        varchar(255),
    description  varchar(255),
    published_at date,
    added_at     timestamp(6),
    primary key (isbn)
);

create table if not exists clubber
(
    id         bigint generated by default as identity,
    name       varchar(255),
    role       enum ('ADMIN','LIBRARIAN','MEMBER'),
    created_at timestamp(6),
    primary key (id)
);

create table if not exists room
(
    id                   bigint generated by default as identity,
    name                 varchar(255),
    owner_id             bigint  not null,
    book_id              varchar(255) unique,
    primary key (id),
    constraint fk_room_owner foreign key (owner_id) references clubber,
    constraint fk_room_book foreign key (book_id) references book
);

create table if not exists room_clubbers
(
    clubber_id bigint not null,
    room_id    bigint not null,
    primary key (clubber_id, room_id),
    constraint fk_room_clubbers_clubber foreign key (clubber_id) references clubber (id),
    constraint fk_room_clubbers_room foreign key (room_id) references room (id)
);


insert into "public"."clubber" ("created_at", "name", "role")
values ('2025-01-31 10:15:00+00', 'Alice Johnson', 'ADMIN'),
       ('2025-01-31 11:30:00+00', 'Bob Smith', 'LIBRARIAN'),
       ('2025-01-31 12:45:00+00', 'Charlie Davis', 'LIBRARIAN'),
       ('2025-01-31 13:00:00+00', 'Diana Green', 'LIBRARIAN'),
       ('2025-01-31 14:20:00+00', 'Ethan White', 'MEMBER'),
       ('2025-01-31 15:35:00+00', 'Fiona Black', 'MEMBER'),
       ('2025-01-31 16:50:00+00', 'George Harris', 'MEMBER'),
       ('2025-01-31 18:05:00+00', 'Hannah Lewis', 'MEMBER'),
       ('2025-01-31 19:20:00+00', 'Ian Walker', 'MEMBER'),
       ('2025-01-31 20:45:00+00', 'Jane Carter', 'MEMBER');


